All: Added home and top button

--- a/databases.html
+++ b/databases.html
@@ -43,14 +43,36 @@
             border-radius:10px;
         }
 
-        #homebtn:hover {
+        #homeBtn:hover {
             background-color: #555;
         }
     </style>
 </head>
 <body>
+<hr/>
     <h1> LI Introductory Databases </h1>
+<hr/>
 
-    <a href="index.html"> Back </a>
+    <!-- Utils -->
+    <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
+    <script>
+        // When the user scrolls down 20px from the top of the document, show the button
+        window.onscroll = function() {scrollFunction()};
+
+        function scrollFunction() {
+            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+                document.getElementById("topBtn").style.display = "block";
+            } else {
+                document.getElementById("topBtn").style.display = "none";
+            }
+        }
+
+        // When the user clicks on the button, scroll to the top of the document
+        function topFunction() {
+            document.body.scrollTop = 0;
+            document.documentElement.scrollTop = 0;
+        }
+    </script>
+    <button onclick="window.location.href='index.html'" id="homeBtn" title="Back to Home"> Home </button>
 </body>
 </html>
