Softeng: Finished requirements engineering

--- a/softeng.html
+++ b/softeng.html
@@ -283,7 +283,7 @@ Table of contents
 <p> Customer and end-user are not always the same person. The end-user is the person who interacts with the system to get the job done, while the customer typically pays for the system. They may have similar or conflicting objectives. Sometimes delighting your end-user delights the customer, but remember that the customer pays for the job. So it is very important to get the customer involved in the initial phase of RE, if at all possible. </p>
 
 <h3 id="reqeng1"> Software Development Lifecycle </h3>
-<p> We have the <strong> V Model</strong>: If problems are found during Verification or Validation phase, he LHS of the V is re-executed to fix the problem. </p>
+<p> We have the <strong> V Model</strong>: If problems are found during Verification or Validation phase, the LHS of the V is re-executed to fix the problem. </p>
 <img src="images/softeng/reqeng1.JPG"/>
 <p> Prototyping allows all or part of the system to be constructed quickly in the hopes of clarifying and understanding issues. Iterate requirements and design to ensure common understanding. </p>
 
