ProfComp: Finished intro and laws

--- a/professionalcomputing.html
+++ b/professionalcomputing.html
@@ -5,7 +5,7 @@
     <title> Professional Computing </title>
     <style type="text/css">
         body {
-            background-color: #ffe6ff;
+            background-color: #c8ffc8;
             font-family: "Georgia", serif;
         }
 
@@ -40,7 +40,7 @@
             color: white;
             cursor: pointer;
             padding: 15px;
-            border-radius:10px;
+            border-radius: 10px;
         }
 
         #homeBtn:hover {
@@ -49,30 +49,116 @@
     </style>
 </head>
 <body>
-<hr/>
-    <h1> LI Professional Computing </h1>
-<hr/>
+<hr/> <!----------------------------------------------------------------------------------->
+<h1> LI Professional Computing </h1>
+<hr/> <!----------------------------------------------------------------------------------->
+Table of contents
+<ol>
+    <li><a href="#intro"> Introduction </a></li>
+    <li><a href="#legals"> Legal Perspectives </a><ul>
+        <li><a href="#legals1"> Laws </a></li>
+        <li><a href="#legals2"> Computer Misuse Act 1990 </a> </li>
+    </ul></li>
 
-    <!-- Utils -->
-    <button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
-    <script>
-        // When the user scrolls down 20px from the top of the document, show the button
-        window.onscroll = function() {scrollFunction()};
+</ol>
+<hr/> <!----------------------------------------------------------------------------------->
 
-        function scrollFunction() {
-            if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
-                document.getElementById("topBtn").style.display = "block";
-            } else {
-                document.getElementById("topBtn").style.display = "none";
-            }
+<h2 id="intro"> Introduction </h2>
+<p> The word professional has a wide range of meanings. It may be a recognised profession such as medical doctor, lawyer, teacher, dentist, etc. In order to earn that title, one most require substantial education, and the members of the profession decide the nature of the required education or training. The profession has one or more professional bodies and the it lays down standards of conduct which members must comply. </p>
+
+<p> Professional Bodies establish a code of conduct to which members of the profession must abide. They must also establish mechanisms for the dissemination of knowledge and good practice to members. Also, they have to set standards of education and advice government and regulators. </p>
+
+<p> <strong>Reservation of title</strong>: In order to call yourself a member of the profession you must be recognised by the professional body. E.g. To advertise yourself as an architect is illegal without permission of the ARB.  </p>
+
+<p> <strong>Reservation of function</strong>: Also, to carry out the functions associated with the profession, you must be recognised by the body. E.g. to audit the accounts of any public company, you must be recognised by the Assoc of Certified Accountants. </p>
+
+<p> The term "engineer" is unrestricted in the UK. The IT industry is unregulated but we do have a professional body. Our professional body does not have regulatory powers, but it does accredit degree programs, advise the government on IT related issues, disseminate good practice and attempt to define "professional behaviour". </p>
+
+<hr/> <!----------------------------------------------------------------------------------->
+
+<h2 id="legals"> Legal Perspectives </h2>
+<h3 id="legals1"> Law </h3>
+<p> Law is a complex and difficult thing. Laws have geographical jurisdiction, i.e. those that applies here may not apply in the US. We wil be focusing on English Law. Jurisdiction is not straight forward in terms on computer use. <br/> The law is more than just a set of rules. There are different system of courts, different rules concerning how appeals are made, different rules about how new laws work with old. </p>
+
+<h4> Criminal vs Civil Law </h4>
+<p> Most of what this will cover comes under the <strong>Civil law</strong>, which is about negligence, conflicts and disputes between people. But if you are committing an offence against society, then it may be classified under <strong>Criminal law</strong>. <br/> Criminal law is designed to protect society from wrong doers, which may involve police investigation and arrest, then the Crown Prosecution Service may proceed with prosecution. <br> Civil law is mostly settling disputes between people or companies. Litigation must be brought by one of the parties of the dispute (plaintiff) against the another (defendant). Usual objective is to obtain damages, money, or injunction (court order). <br/> The key difference between criminal and civil law is the standards of proof required; in criminal you are "innocent until proven guilty", while in the civil law both parties must present arguments and decision is based on "balance of probabilities". <br/> Hacking is also included in criminal law. </p>
+
+<h4> Tort </h4>
+<p> In a common law, a tort is a civil wrong. The action might not necessarily be illegal or criminal, but somehow has caused harm which can be re-addressed through the courts. For example this could be a traffic accident. Torts are usually re-addressed through damages awarded. This is arguable by negligence, but negligence may be enough for someone to bring to court. A nuisance that breaks the peace like playing loud music in the middle of the night may also be a case under tort law. Same goes to defamation (damaging the good reputation of somebody). </p>
+
+<h4> Legislation </h4>
+<p> A "Legislative Act of Parliament" (or statute) can create, amend, repeal any new law or existing law. Any statute overrules any previous act or precedent, but not court decisions. The body of law is regularly reviewed by the law commission. This means that you cannot be prosecuted for an offence which the law wasn't created at the time of the offence. </p>
+
+<p> The process of this is usually drafted under supervision of government minister. Then the bill is introduced in the House of Commons or Lords, and after it passes, then it becomes an Act and the law comes to force. </p>
+
+<p> European Union is another layer of complication above this. The council of the European Union and European Parliament have legislative powers. There are laws that are made by the EU and impact directly on English Law, and EU directives can instruct member states to alter their laws. And members of the country are obliged to abide by the law. </p>
+
+<p> What will happen when the UK exits the EU is that the "Great Repeal Act" will happen. Any law that has been forced by the EU will be enacted (practiced) by the British Law, and then those laws will be unwind as per the parliament. In other words, all laws that has been forced by the EU will be converted to the British law, then the law that we don't like can just be unwind. </p>
+
+<h3 id="legals2"> Computer Misuse Act 1990 </h3>
+<p> Three offences: </p>
+<ul>
+    <li> Unauthorised access to a computer </li>
+    <li> Unauthorised access to a computer to commit serious crime </li>
+    <li> Unauthorised modification of the contents of a computer.</li>
+</ul>
+<p> A person is guilty of a crime if either they or the computer in question is in the UK at the time of the offence. </p>
+
+<h4> Unauthorised Access Offence </h4>
+<p> A person is guilty of an offence if they cause a computer to perform any function with intent to secure access ot any program or data held in any computer, also guilty if the access they intend to secure is unauthorised, and they know at the time they do not have permission. They could be fined or prisoned. </p>
+
+<p> Key points </p>
+<ul>
+    <li> Knowledge and intent </li>
+    <li> Attempt is sufficient, need not be successful </li>
+    <li> No requirement of damage done </li>
+</ul>
+
+<h4> Serious Crime Intent </h4>
+<p> If a person is caught to use the computer for a serious crime like hacking, blackmail, then a more serious punishment will be forced down. Again, need not be successful but if intent can be proven then it is sufficient. </p>
+
+<h4> Unauthorised Modification </h4>
+<p> A person is guilty of an offence if they do any act which causes an unauthorised modification of the contents of any computer, and at the time when they do the act they have the requisite intent and the requisite knowledge. </p>
+<p> The requisite intent covers: </p>
+<ul>
+    <li> To impair the operation of any computer </li>
+    <li> To prevent or hinder access to any program or data held in any computer </li>
+    <li> To impair the operation of such program or the reliability of any such data </li>
+</ul>
+<p> This may include spreading a virus, encrypting files and demanding a ransom for revealing the key, redirection of browser home pages, etc. </p>
+
+<h4> Issues surrounding CMA </h4>
+<p> Common view is that the real issue with computer crime is a lack of resources for investigation and prosecution rather than a lack of laws. Phishing for instance is better dealt as a case of Fraud. </p>
+
+<hr/> <!----------------------------------------------------------------------------------->
+
+
+
+
+
+
+<!-- Utils -->
+<button onclick="topFunction()" id="topBtn" title="Go to top">Top</button>
+<script>
+    // When the user scrolls down 20px from the top of the document, show the button
+    window.onscroll = function () {
+        scrollFunction()
+    };
+
+    function scrollFunction() {
+        if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
+            document.getElementById("topBtn").style.display = "block";
+        } else {
+            document.getElementById("topBtn").style.display = "none";
         }
+    }
 
-        // When the user clicks on the button, scroll to the top of the document
-        function topFunction() {
-            document.body.scrollTop = 0;
-            document.documentElement.scrollTop = 0;
-        }
-    </script>
-    <button onclick="window.location.href='index.html'" id="homeBtn" title="Back to Home"> Home </button>
+    // When the user clicks on the button, scroll to the top of the document
+    function topFunction() {
+        document.body.scrollTop = 0;
+        document.documentElement.scrollTop = 0;
+    }
+</script>
+<button onclick="window.location.href='index.html'" id="homeBtn" title="Back to Home"> Home</button>
 </body>
 </html>
