--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <td> Muirhead 121 </td>
             <td align="center"> 37 </td>
             <td align="center"> - </td>
-            <td align="center"> Fill! </td>
+            <td align="center"> - </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="softEng"></p> </td>
         </tr>
@@ -75,7 +75,7 @@
             <td> Chemical Engineering 112 </td>
             <td align="center"> - </td>
             <td align="center"> 5 </td>
-            <td align="center"> Fill! </td>
+            <td align="center"> - </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="vision"></p> </td>
         </tr>
@@ -87,7 +87,7 @@
             <td> New Gym </td>
             <td align="center"> 137 </td>
             <td align="center"> 21 </td>
-            <td align="center"> Fill! </td>
+            <td align="center"> 84 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="models"></p> </td>
         </tr>
@@ -99,7 +99,7 @@
             <td> Avon Room </td>
             <td align="center"> 210 </td>
             <td align="center"> 90 </td>
-            <td align="center"> Fill! </td>
+            <td align="center"> 156 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="databases"></p> </td>
         </tr>
@@ -111,7 +111,7 @@
             <td> Great Hall </td>
             <td align="center"> 141 </td>
             <td align="center"> 21 </td>
-            <td align="center"> Fill! </td>
+            <td align="center"> 87 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="profComp"></p> </td>
         </tr>
@@ -123,7 +123,7 @@
             <td> Sports Hall </td>
             <td align="center"> 332 </td>
             <td align="center"> 216 </td>
-            <td align="center"> Fill! </td>
+            <td align="center"> 279 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="csa"></p> </td>
         </tr>
@@ -135,7 +135,7 @@
             <td> Arts Lecture Room 2 </td>
             <td align="center"> 39 </td>
             <td align="center"> 10 </td>
-            <td align="center"> Fill! </td>
+            <td align="center"> 22 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="ccpp"></p> </td>
         </tr>
@@ -147,7 +147,7 @@
             <td> Muirhead 121 </td>
             <td align="center"> 42 </td>
             <td align="center"> 11 </td>
-            <td align="center"> Fill! </td>
+            <td align="center"> 32 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="graphics"></p> </td>
         </tr>
@@ -159,7 +159,7 @@
             <td> New Gym </td>
             <td align="center"> 197 </td>
             <td align="center"> 92 </td>
-            <td align="center"> Fill! </td>
+            <td align="center"> 152 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="maths"></p> </td>
         </tr>
@@ -171,9 +171,21 @@
             <td> Avon Room </td>
             <td align="center"> 209 </td>
             <td align="center"> 114 </td>
-            <td align="center"> Fill! </td>
+            <td align="center"> 168 </td>
             <td align="center"> 1:30hrs </td>
             <td> <p style="font-size: 18px; font-family: Consolas, serif" id="security"></p> </td>
+        </tr>
+		<tr> <!-- Natural Language Processing -->
+            <td> Wednesday </td>
+            <td> 31/05/2017 </td>
+            <td align="center"> 09:30 </td>
+            <td> <a href="nlp.html"> LI Natural Language Processing </a> </td>
+            <td> New Gym </td>
+            <td align="center"> - </td>
+            <td align="center"> - </td>
+            <td align="center"> 41 </td>
+            <td align="center"> 1:30hrs </td>
+            <td> <p style="font-size: 18px; font-family: Consolas, serif" id="nlp"></p> </td>
         </tr>
     </table>
 
@@ -311,6 +323,18 @@
             document.getElementById("security").innerHTML = "<strong> DONE! </strong>";
         }
 
+		// nlp exam
+        var nlpDate = new Date("May 31, 2017 09:30:00").getTime();
+        var nlpDistance = nlpDate - now;
+        var nlpLeft = Math.floor(nlpDistance / (1000 * 60 * 60 * 24));
+        document.getElementById("nlp").innerHTML = nlpLeft + "d";
+        if (nlpLeft < 1 && nlpLeft >= 0) {
+            document.getElementById("nlp").innerHTML = "<strong> Tomorrow!! </strong> <br/> Pray and do your best!";
+        }
+        // If the count down is finished, write some text
+        else if (securityDistance < 0) {
+            document.getElementById("nlp").innerHTML = "<strong> DONE! </strong>";
+        }
     </script>
     <hr/>
 
